set01/problem06debug.txt
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets> cd set01
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> git add .
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> git commit -m "test"
[main 2a05b8d] test
 3 files changed, 34 insertions(+)
 create mode 100644 set01/problem06debug.txt
 create mode 100644 set01/problem06error.txt
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> git push
fatal: unable to access 'https://github.com/VarnikaReddy/C_activity_sets.git/': Could not resolve host: github.com
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> gcc problem06.c
problem06.c: In function 'compare':
problem06.c:25:9: error: 'largest' redeclared as different kind of symbol
     int largest;
         ^~~~~~~
problem06.c:23:40: note: previous definition of 'largest' was here
 void compare(int a, int b, int c, int *largest)
                                        ^~~~~~~
problem06.c:28:9: error: invalid type argument of unary '*' (have 'int')
         *largest=a;
         ^~~~~~~~
problem06.c:32:9: error: invalid type argument of unary '*' (have 'int')
         *largest=b;
         ^~~~~~~~
problem06.c:36:9: error: invalid type argument of unary '*' (have 'int')
         *largest=c;
         ^~~~~~~~
PS C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01> gdb a.exe
GNU gdb (GDB) 7.6.1
Copyright (C) 2013 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "mingw32".
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>...
Reading symbols from C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01\a.exe...done.
(gdb) b main
Breakpoint 1 at 0x401463
(gdb) r
Starting program: C:\Users\Varnika Reddy\Documents\GitHub\C_activity_sets\set01/a.exe
[New Thread 25440.0x43a0]
[New Thread 25440.0x5034]

Breakpoint 1, 0x00401463 in main ()
(gdb) s
Single stepping until exit from function main,
which has no line number information.